render git graph

--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -7,6 +7,11 @@
   <title>Git Visualizer</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <div id="graph-container-loading"></div>
+  <div id="graph-container"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@gitgraph/js"></script>
+  <script src="/js/options.js"></script>
+  <script src="/js/history.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
